[project]
name = "selfcast"
version = "0.1.0"
description = "Convert webpages to audiobooks using local LLM and TTS inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "pypdf>=4.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "trafilatura>=1.6.0",
]
